additional things for sponosorblock

--- a/html/themes.html
+++ b/html/themes.html
@@ -40,7 +40,7 @@
 
                     <li><a class="page-selection" href="#2">2) Custom Theme Options</a></li>
                     <ul>
-                        <li><a class="page-selection" href="#21">2.1) Color Selector</a></li>
+                        <li><a class="page-selection" href="#21">2.1) Color Option</a></li>
                         <li><a class="page-selection" href="#22">2.2) Link Option</a></li>
                         <li><a class="page-selection" href="#23">2.3) Number Option</a></li>
                     </ul>
@@ -56,14 +56,22 @@
 
                 <h2 id="1">Creating a Custom Theme</h2>
                 <p>
-                    Let's get straight into creating our own custom theme.
+                    Custom themes in PlayerTube are made up of a number of options available in
+                    PlayerTube's settings. You can share, edit, or make your own theme to however
+                    you like. The custom theme options are basically like lines of CSS code, being
+                    able to change their values but with a bit more hand-holding. In this guide,
+                    we will be using the <kbd>Custom Theme Settings</kbd> section of PlayerTube's
+                    settings to start our creation of a custom theme.
+                </p>
+                <p>
+                    Let's start with the basics!
                 </p>
 
                 <br>
 
                 <h3 id="11">Enabling Custom Themes</h3>
                 <p>
-                    To enable custom themes, head over to the PlayerTube extension icon at the to
+                    To enable custom themes, head over to the PlayerTube extension icon at the top
                     of your browser. A popup should appear with the PlayerTube settings. We'll be
                     using this a lot throughout the guide, so remember how to access it!
                     <br>
@@ -77,14 +85,14 @@
                     should notice many more options for customization!
                 </p>
                 <p>
-                    Note that some options in the custom theme selection might not need to be
-                    changed. Make sure to read the option's title <b>and description</b> before
+                    Note that some options in the custom theme selection might not need any
+                    changing, so make sure to read the option's title <b>and description</b> before
                     changing it.
                 </p>
                 <p>
-                    You can find what each option does by looking at
-                    <a class="page-selection" href="#2">Custom Theme Options</a>, but most are
-                    easy to understand and we won't go over each one in this section.
+                    You can find out what each type of option does by looking at the
+                    <a class="page-selection" href="#2">Custom Theme Options</a> part of this guide,
+                    but most are easy to understand and we won't go over each one in this section.
                 </p>
 
                 <br>
@@ -92,7 +100,7 @@
                 <h3 id="12">Creating a Custom Scrubber</h3>
                 <p>
                     When it comes to setting a custom scrubber, it'll need some patience and hope
-                    to get perfect, but it'll be worth it.
+                    to get perfect, but it'll be worth our pain & suffering.
                 </p>
                 <p>
                     For this, we'll be using this
@@ -101,9 +109,9 @@
                 </p>
                 <img src="https://i.imgur.com/hJbFUyj.gif" style="display: block;width: 6rem;margin: auto;">
                 <p>
-                    If you haven't already, make sure your image is uploaded to a website with
-                    <kbd>https://</kbd>, like <a href="https://imgur.com/">Imgur</a> or any other
-                    image hosting website that is free to access.
+                    If you're using your own image, make sure your image is uploaded to a website
+                    with <kbd>https://</kbd>, like <a href="https://imgur.com/">Imgur</a> or any
+                    other image hosting website that is free to access.
                 </p>
                 <p>
                     First, we'll apply the GIF to the <a class="page-selection" href="#22">link option</a>
@@ -139,12 +147,12 @@
                     I recommend multiplying or adding to it's current value by two. You can do
                     the opposite if the image is bigger (obviously).
                     <br>
-                    Make sure to reload the YouTube page you're using for testing everytime you
-                    update PlayerTube's configuration.
+                    Make sure to reload the YouTube page everytime you update PlayerTube's
+                    configuration.
                 </p>
                 <p>
-                    When changing the image size, don't worry about if the image seems to be cut
-                    off. You can use the <kbd>Change the height of the Scrubber</kbd> and
+                    When changing the image size, don't worry if the image seems to be cut off.
+                    You can use the <kbd>Change the height of the Scrubber</kbd> and
                     <kbd>Change the width of the Scrubber</kbd> number options that is below the
                     <kbd>Change the image size of the Scrubber</kbd> number option to make the
                     scrubber image appear and make it's actual size bigger.
@@ -171,10 +179,16 @@
                     <kbd>Custom Theme Settings</kbd> section of PlayerTube's configuration.
                 </p>
                 <p>
-                    User will then have to follow the steps on
-                    <a href="#3">Adding a Custom Theme</a> on this page to apply your theme using
-                    the settings you get from the
+                    The users that want to use your custom theme will have to follow the steps on
+                    <a class="page-selection" href="#3">Adding a Custom Theme</a> on this page to
+                    apply it using the settings you get from the
                     <kbd>Copy Custom Theme Settings to Clipboard</kbd> button.
+                </p>
+                <p>
+                    One other thing that should be obvious is that the custom theme can be changed
+                    by the users, meaning you should have a open-mind when others change it.
+                    Sharing your theme doesn't lock it so only you can edit it, as anyone else
+                    could do the same with or without a lock (if there was any but there ain't!!!).
                 </p>
 
 
@@ -192,9 +206,9 @@
 
                 <br>
 
-                <h3 id="21">Color Selector</h3>
+                <h3 id="21">Color Option</h3>
                 <p>
-                    A color selector is used to set a custom color for the option it's linked to.
+                    A color option is used to set a custom color for the option it's linked to.
                     Powered by <a href="https://coloris.js.org/" target="_blank">Coloris</a>.
                 </p>
                 <img src="../img/docs/color-selector-option.png" style="display: block;margin: auto;">
