add #28 and also working on V3 / Rehike support

--- a/html/update.html
+++ b/html/update.html
@@ -35,6 +35,7 @@
                     <ul>
                         <li>A lot of CSS improvements.</li>
                         <li>Change of placement for the "Change year of Player" settings option.</li>
+                        <li>Added <a href="https://github.com/ktg5/PlayerTube/issues/28">#28 -- "[ Feature Request ] add a toggle for the custom loading icon"</a>.</li>
                     </ul>
                 </div>
 
