making on Project V3 support, also might be fixing #29

--- a/html/update.html
+++ b/html/update.html
@@ -32,10 +32,14 @@
                 <br> -->
                 <div class="v1dot7dot3">
                     <h1>PlayerTube has been updated!</h1>
+                    <h3>Some year names have been changed and they are listed below.</h3>
                     <ul>
+                        <li><b>Renamed the 2012 theme to 2013 & 2011 to 2012</b> because of <a href="https://i.imgur.com/jqa9TkR.jpeg">this</a> image (that's new to me).</li>
+                        <li>Change of placement for the <kbd>Change year of Player</kbd> settings option.</li>
+                        <li><b>Fixed the "TrustedTypes" issue with the resize script.</b></li>
+                        <li><b>Added <a href="https://vorapis.pages.dev/#/">Project V3</a> support</b> (somewhat). As of currently, there is no manual configuration needed for this extension.</li>
                         <li>A lot of CSS improvements.</li>
-                        <li>Change of placement for the "Change year of Player" settings option.</li>
-                        <li>Added <a href="https://github.com/ktg5/PlayerTube/issues/28">#28 -- "[ Feature Request ] add a toggle for the custom loading icon"</a>.</li>
+                        <li>Added <a href="https://github.com/ktg5/PlayerTube/issues/28">#28 -- "[ Feature Request ] add a toggle for the custom loading icon"</a> under <kbd>Toggle the loading spinner [...]</kbd>.</li>
                     </ul>
                 </div>
 
@@ -66,7 +70,7 @@
                     <div style="font-weight: 600;">v1.7.1</div>
                     <ul>
                         <li>Improvements to resize script (using custom detection v2.1).</li>
-                        <li>2012 & 2011 CSS improvements.</li>
+                        <li>2013 & 2012 CSS improvements.</li>
                         <li><a href="themes.html">Custom theme documentation and guide</a>.</li>
                         <li>Make configuration menu buttons look a bit nicer.</li>
                         <li>Improvements to all extension pages.</li>
@@ -84,7 +88,7 @@
                         <li>Fix <a href="https://github.com/ktg5/PlayerTube/issues/24">#24 -- "[ Bug ] Embed Fixes & Resize Issues | [ 3rd-party ] YouTube Redux messes with PlayerTube"</a>.</li>
                         <li>Volume icon now changes when the user set the volume below 75% & 25% using current volume detection.</li>
                         <li>Added "no-left-button" & "no-right-button" detection for themes that need it (like 2006).</li>
-                        <li>Remade the Watch Later button used in 2012 & 2011 due to issues.</li>
+                        <li>Remade the Watch Later button used in 2013 & 2012 due to issues.</li>
                         <li>Allow "Alternate Theme" to be used when "Custom Themes" are enabled, allowing users to use the alternate buttons from that alternate theme.</li>
                         <li>Fix the clip icon by the time display for clips on the 2006 theme (<a href="https://www.youtube.com/clip/UgkxyNXRaAnHXIjM9d-JQB_r32gUnov9sIV6">using this clip lol</a>).</li>
                         <li>Fix past update logs.</li>
@@ -108,7 +112,7 @@
 
                 <div class="v1dot6dot1">
                     <div style="font-weight: 600;">v1.6.1</div>
-                    <b>NOTE: "Dark Mode" is now renamed to "Alternate Theme" with the new 2012 white theme!</b>
+                    <b>NOTE: "Dark Mode" is now renamed to "Alternate Theme" with the new 2013 white theme!</b>
                     <ul>
                         <li><b>FINALLY finished 2006 theme.</b></li>
                         <li>Add <a href="https://github.com/ktg5/PlayerTube/issues/13">#13 -- "Light Theme for 2015 YouTube Player"</a>.</li>
@@ -124,7 +128,7 @@
 
                 <div class="v1dot6">
                     <div style="font-weight: 600;">v1.6</div>
-                    <b>NOTE: Year names have changed -- <i>2012</i> is now <i>2011</i> and <i>2015</i> is now <i>2012</i>.</b>
+                    <b>NOTE: Year names have changed -- <i>2013</i> is now <i>2012</i> and <i>2015</i> is now <i>2013</i>.</b>
                     <ul>
                         <li><b>Addition to the long-time issue of the Progress Bar not fully extending.</b> Currently the new fix doesn't work in embed & fullscreen, it's better than before. Old fix is used instead for those modes.</li>
                         <li>Also finally fixed the long-time issue of PlayerTube's scripts running multiple times.</li>
@@ -162,7 +166,7 @@
                         <li><b>2010 now does not fully extend the progress bar by default. This can be re-enabled by using one of the new settings under, "Fully extend the Progress Bar's height at all times"</b></li>
                         <li>Possibly fixed extension pages to actually show?</li>
                         <li>In the extension popup, some opinions have links to information about what the setting will target.</li>
-                        <li>Fixed some link & embed issues with 2011 & 2012</li>
+                        <li>Fixed some link & embed issues with 2012 & 2013</li>
                         <li>Improved on 2010's top buttons</li>
                         <li>Added the ability to toggle the Paid Content popups on videos (Disabled by default)</li>
                         <li>Added the ability to toggle Info Cards (Enabled by default)</li>
@@ -205,7 +209,7 @@
                     <div style="font-weight: 600;">v1.3</div>
                     <ul>
                         <li>Fixed an Firefox issue with 2010 theme.</li>
-                        <li>Fixed 3rd-party CSS not loading on 2011 & 2010 themes.</li>
+                        <li>Fixed 3rd-party CSS not loading on 2012 & 2010 themes.</li>
                         <li>Added a toggle for the "Heat Map" ontop of the progress bar. (Aka the transparent hills that shows you the most replayed moments in the current video)</li>
                         <li>Improved the text area for the user's config.</li>
                         <li>Better color picker for custom theme settings.</li>
