--- a/html/update.html
+++ b/html/update.html
@@ -34,10 +34,10 @@
                     <h1>PlayerTube has been updated!</h1>
                     <h3>Some year names have been changed and they are listed below.</h3>
                     <ul>
-                        <li><b>Renamed the 2012 theme to 2013 & 2011 to 2012</b> because of <a href="https://i.imgur.com/jqa9TkR.jpeg">this</a> image (that's new to me).</li>
+                        <li><b>Renamed the 2012 theme to 2013 & 2011 to 2012</b> because of <a href="https://i.imgur.com/jqa9TkR.jpeg">this image</a> (that's new to me).</li>
                         <li>Change of placement for the <kbd>Change year of Player</kbd> settings option.</li>
                         <li><b>Fixed the "TrustedTypes" issue with the resize script.</b></li>
-                        <li><b>Added <a href="https://vorapis.pages.dev/#/">Project V3</a> support</b> (somewhat). As of currently, there is no manual configuration needed for this extension.</li>
+                        <li><b>Added <a href="https://vorapis.pages.dev/#/">Project V3</a> support</b>, only 2013-2010 themes & custom themes are supported. As of currently, there is no manual configuration needed for this extension.</li>
                         <li>A lot of CSS improvements.</li>
                         <li>Added <a href="https://github.com/ktg5/PlayerTube/issues/28">#28 -- "[ Feature Request ] add a toggle for the custom loading icon"</a> under <kbd>Toggle the loading spinner [...]</kbd>.</li>
                     </ul>
