--- a/html/update.html
+++ b/html/update.html
@@ -30,14 +30,15 @@
             <div class="text">
                 <!-- <b>New updates to the <a href="extensions.html">Extension Support page</a>! Please check it to see if you need to do manual configuration for your extensions!</b>
                 <br> -->
-                <div class="v1dot7dot3">
+                <div class="v1dot8">
                     <h1>PlayerTube has been updated!</h1>
                     <h3>Some year names have been changed and they are listed below.</h3>
+                    <div style="margin-bottom: 12px;">This update shouldn't have taken so long, but I've working on other stuff recently!!</div>
                     <ul>
                         <li><b>Renamed the 2012 theme to 2013 & 2011 to 2012</b> because of <a href="https://i.imgur.com/jqa9TkR.jpeg">this image</a> (that's new to me).</li>
                         <li>Change of placement for the <kbd>Change year of Player</kbd> settings option.</li>
                         <li><b>Fixed the "TrustedTypes" issue with the resize script.</b></li>
-                        <li><b>Added <a href="https://vorapis.pages.dev/#/">Project V3</a> support</b>, somewhat. Only 2013-2010 themes & custom themes are supported. As of currently, there is no manual configuration needed for this extension.</li>
+                        <li><b>Added <a href="https://vorapis.pages.dev/#/">Project V3</a> support</b>, somewhat. Only the 2013 & 2012 theme & custom themes are supported. As of currently. There is no manual configuration needed for this extension.</li>
                         <li>Added <a href="https://github.com/ktg5/PlayerTube/issues/28">#28 -- "[ Feature Request ] add a toggle for the custom loading icon"</a> under <kbd>Toggle the loading spinner [...]</kbd>.</li>
                         <li>A lot of CSS improvements.</li>
                     </ul>
