--- a/html/update.html
+++ b/html/update.html
@@ -40,7 +40,7 @@
                         <li><b>Fixed the "TrustedTypes" issue with the resize script.</b></li>
                         <li><b>Added <a href="https://vorapis.pages.dev/#/">Project V3</a> support</b>, somewhat. Only the 2013 & 2012 theme & custom themes are supported. As of currently. There is no manual configuration needed for this extension.</li>
                         <li>Added <a href="https://github.com/ktg5/PlayerTube/issues/28">#28 -- "[ Feature Request ] add a toggle for the custom loading icon"</a> under <kbd>Toggle the loading spinner [...]</kbd>.</li>
-                        <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/31">#31 -- "[ Bug ] When in theater mode theres a slight black bar under the player"</a>.</li>
+                        <li>(Added in 1.8.0.1)Fixed <a href="https://github.com/ktg5/PlayerTube/issues/31">#31 -- "[ Bug ] When in theater mode theres a slight black bar under the player"</a>.</li>
                         <li>A lot of CSS improvements.</li>
                     </ul>
                 </div>
