fix #33 & add new funny feature

--- a/html/update.html
+++ b/html/update.html
@@ -34,6 +34,8 @@
                     <h1>PlayerTube has been updated!</h1>
                     <ul>
                         <li>Added <a href="https://github.com/ktg5/PlayerTube/pull/32">#32 -- Fix volume sliders for all themes</a> + additional fixes by myself. (hi ladd you're on here now)</li>
+                        <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/33">#33 -- "[ Bug ] Scrubber is Always On"</a></li>
+                        <li>Hovering over a video or pausing a video will now extend the progress bar like in Rehike/Project V3.</li>
                         <li>Fixed styling on extension popup.</li>
                     </ul>
                 </div>
