--- a/html/update.html
+++ b/html/update.html
@@ -30,13 +30,11 @@
             <div class="text">
                 <!-- <b>New updates to the <a href="extensions.html">Extension Support page</a>! Please check it to see if you need to do manual configuration for your extensions!</b>
                 <br> -->
-                <div class="v1dot8dot1">
+                <div class="v1dot8dot2">
                     <h1>PlayerTube has been updated!</h1>
                     <ul>
-                        <li>Added <a href="https://github.com/ktg5/PlayerTube/pull/32">#32 -- Fix volume sliders for all themes</a> + additional fixes by myself. (hi ladd you're on here now)</li>
-                        <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/33">#33 -- "[ Bug ] Scrubber is Always On"</a></li>
-                        <li>Hovering over a video or pausing a video will now extend the progress bar like in Rehike/Project V3.</li>
-                        <li>Fixed styling on extension popup.</li>
+                        <li>Updated links in settings popup.</li>
+                        <li>Build script improvements.</li>
                     </ul>
                 </div>
 
@@ -54,6 +52,18 @@
                 <br>
 
                 <h2>Past versions...</h2>
+                <div class="v1dot8dot1">
+                    <div style="font-weight: 600;">v1.8.1</div>
+                    <ul>
+                        <li>Added <a href="https://github.com/ktg5/PlayerTube/pull/32">#32 -- Fix volume sliders for all themes</a> + additional fixes by myself. (hi ladd you're on here now)</li>
+                        <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/33">#33 -- "[ Bug ] Scrubber is Always On"</a></li>
+                        <li>Hovering over a video or pausing a video will now extend the progress bar like in Rehike/Project V3.</li>
+                        <li>Fixed styling on extension popup.</li>
+                    </ul>
+                </div>
+
+                <br>
+
                 <div class="v1dot8">
                     <div style="font-weight: 600;">v1.8</div>
                     <div style="margin-bottom: 12px;">This update shouldn't have taken so long, but I've working on other stuff recently!!</div>
