ok lemme stop hauling on this, let's release the fix

--- a/html/update.html
+++ b/html/update.html
@@ -33,6 +33,14 @@
                 <div class="v1dot8dot2">
                     <h1>PlayerTube has been updated!</h1>
                     <ul>
+                        <li>
+                            <b>
+                                Disabled the extra hovering effects due to unfortunate performance issues. (Or something along that;
+                                turned this off for a while & seems to be running way better)
+                            </b>
+                            I should aplogize for this issue, as I should've tested it more. Future updates will not miss out on
+                            any proper testing; pinky promise!
+                        </li>
                         <li>Updated links in settings popup.</li>
                         <li>Build script improvements.</li>
                     </ul>
