--- a/html/update.html
+++ b/html/update.html
@@ -30,19 +30,11 @@
             <div class="text">
                 <!-- <b>New updates to the <a href="extensions.html">Extension Support page</a>! Please check it to see if you need to do manual configuration for your extensions!</b>
                 <br> -->
-                <div class="v1dot8dot2">
+                <div class="v1dot8dot3">
                     <h1>PlayerTube has been updated!</h1>
                     <ul>
-                        <li>
-                            <b>
-                                Disabled the extra hovering effects due to unfortunate performance issues. (Or something along that;
-                                turned this off for a while & seems to be running way better)
-                            </b>
-                            I should aplogize for this issue, as I should've tested it more. Future updates will not miss out on
-                            any proper testing; pinky promise!
-                        </li>
-                        <li>Updated links in settings popup.</li>
-                        <li>Build script improvements.</li>
+                        <li>Fix issue <a href="https://github.com/ktg5/PlayerTube/issues/40">#40</a> with all themes.</li>
+                        <li>Build script improvements -- mostly relating to Firefox as I've had a stupid thing in it for a while I never realized until now.</li>
                     </ul>
                 </div>
 
@@ -60,6 +52,22 @@
                 <br>
 
                 <h2>Past versions...</h2>
+                <div class="v1dot8dot2">
+                    <div style="font-weight: 600;">v1.8.2</div>
+                    <ul>
+                        <li>
+                            <b>
+                                Disabled the extra hovering effects due to unfortunate performance issues. (Or something along that;
+                                turned this off for a while & seems to be running way better)
+                            </b>
+                            I should aplogize for this issue, as I should've tested it more. Future updates will not miss out on
+                            any proper testing; pinky promise!
+                        </li>
+                        <li>Updated links in settings popup.</li>
+                        <li>Build script improvements.</li>
+                    </ul>
+                </div>
+
                 <div class="v1dot8dot1">
                     <div style="font-weight: 600;">v1.8.1</div>
                     <ul>
