awaiting on possibly solving one more issue before release
totally forgot about the past commit on here & should've uploaded it to webstores lol

--- a/html/update.html
+++ b/html/update.html
@@ -32,9 +32,11 @@
                 <br> -->
                 <div class="v1dot8dot3">
                     <h1>PlayerTube has been updated!</h1>
+                    <div style="margin-bottom: 12px;">I don't know why I love not uploading these updates to the webstores, but we're here now with another update!</div>
                     <ul>
                         <li>Fix issue <a href="https://github.com/ktg5/PlayerTube/issues/40">#40</a> with all themes.</li>
-                        <li>Build script improvements -- mostly relating to Firefox as I've had a stupid thing in it for a while I never realized until now.</li>
+                        <li>Fix CSS importance--mostly for YouTube Redux.</li>
+                        <li>Build script improvements--mostly relating to Firefox as I've had a stupid thing in it for a while I never realized until now.</li>
                     </ul>
                 </div>
 
