might be last update before webstore publish

--- a/html/update.html
+++ b/html/update.html
@@ -34,9 +34,11 @@
                     <h1>PlayerTube has been updated!</h1>
                     <div style="margin-bottom: 12px;">I don't know why I love not uploading these updates to the webstores, but we're here now with another update!</div>
                     <ul>
+                        <li>Added <a href="https://github.com/ktg5/PlayerTube/pull/42">#42 - "Extend to apply to cookie-free YT Player"</a> -- adding <kbd>youtube-nocookie.com</kbd> as a site the extension can run on.</li>
                         <li>Fix issue <a href="https://github.com/ktg5/PlayerTube/issues/40">#40</a> with all themes.</li>
                         <li>Fix CSS importance--mostly for YouTube Redux.</li>
                         <li>Build script improvements--mostly relating to Firefox as I've had a stupid thing in it for a while I never realized until now.</li>
+                        <li>Fix update page "formatting".</li>
                     </ul>
                 </div>
 
@@ -73,8 +75,8 @@
                 <div class="v1dot8dot1">
                     <div style="font-weight: 600;">v1.8.1</div>
                     <ul>
-                        <li>Added <a href="https://github.com/ktg5/PlayerTube/pull/32">#32 -- Fix volume sliders for all themes</a> + additional fixes by myself. (hi ladd you're on here now)</li>
-                        <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/33">#33 -- "[ Bug ] Scrubber is Always On"</a></li>
+                        <li>Added <a href="https://github.com/ktg5/PlayerTube/pull/32">#32 - "Fix volume sliders for all themes"</a> + additional fixes by myself. (hi ladd you're on here now)</li>
+                        <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/33">#33 - "[ Bug ] Scrubber is Always On"</a></li>
                         <li>Hovering over a video or pausing a video will now extend the progress bar like in Rehike/Project V3.</li>
                         <li>Fixed styling on extension popup.</li>
                     </ul>
@@ -90,8 +92,8 @@
                         <li>Change of placement for the <kbd>Change year of Player</kbd> settings option.</li>
                         <li><b>Fixed the "TrustedTypes" issue with the resize script.</b></li>
                         <li><b>Added <a href="https://vorapis.pages.dev/#/">Project V3</a> support</b>, somewhat. Only the 2013 & 2012 theme & custom themes are supported. As of currently. There is no manual configuration needed for this extension.</li>
-                        <li>Added <a href="https://github.com/ktg5/PlayerTube/issues/28">#28 -- "[ Feature Request ] add a toggle for the custom loading icon"</a> under <kbd>Toggle the loading spinner [...]</kbd>.</li>
-                        <li>(Added in 1.8.0.1) Fixed <a href="https://github.com/ktg5/PlayerTube/issues/31">#31 -- "[ Bug ] When in theater mode theres a slight black bar under the player"</a>.</li>
+                        <li>Added <a href="https://github.com/ktg5/PlayerTube/issues/28">#28 - "[ Feature Request ] add a toggle for the custom loading icon"</a> under <kbd>Toggle the loading spinner [...]</kbd>.</li>
+                        <li>(Added in 1.8.0.1) Fixed <a href="https://github.com/ktg5/PlayerTube/issues/31">#31 - "[ Bug ] When in theater mode theres a slight black bar under the player"</a>.</li>
                         <li>A lot of CSS improvements.</li>
                     </ul>
                 </div>
@@ -125,8 +127,8 @@
                     This update took too long to make... <b>But I can say that this extension is now 90% stable & finished.</b>
                     <br>
                     <ul>
-                        <li>Fix <a href="https://github.com/ktg5/PlayerTube/issues/20">#20 -- "narrow video is stretched (zoomed) to fit"</a>.</li>
-                        <li>Fix <a href="https://github.com/ktg5/PlayerTube/issues/24">#24 -- "[ Bug ] Embed Fixes & Resize Issues | [ 3rd-party ] YouTube Redux messes with PlayerTube"</a>.</li>
+                        <li>Fix <a href="https://github.com/ktg5/PlayerTube/issues/20">#20 - "narrow video is stretched (zoomed) to fit"</a>.</li>
+                        <li>Fix <a href="https://github.com/ktg5/PlayerTube/issues/24">#24 - "[ Bug ] Embed Fixes & Resize Issues | [ 3rd-party ] YouTube Redux messes with PlayerTube"</a>.</li>
                         <li>Volume icon now changes when the user set the volume below 75% & 25% using current volume detection.</li>
                         <li>Added "no-left-button" & "no-right-button" detection for themes that need it (like 2006).</li>
                         <li>Remade the Watch Later button used in 2013 & 2012 due to issues.</li>
@@ -143,7 +145,7 @@
                 <div class="v1dot6dot2">
                     <div style="font-weight: 600;">v1.6.2</div>
                     <ul>
-                        <li>Fix <a href="https://github.com/ktg5/PlayerTube/issues/18">#18 -- "HD Lettering Not Showing on Settings Button"</a>.</li>
+                        <li>Fix <a href="https://github.com/ktg5/PlayerTube/issues/18">#18 - "HD Lettering Not Showing on Settings Button"</a>.</li>
                         <li>Multiple 2006 theme improvements (Mainly fixing <a href="https://github.com/ktg5/PlayerTube/issues/16">#16 -- "2006 Player | Progress Bar & Other Issues"</a>).</li>
                         <li>Now using a "base" CSS that all themes use.</li>
                     </ul>
@@ -156,7 +158,7 @@
                     <b>NOTE: "Dark Mode" is now renamed to "Alternate Theme" with the new 2013 white theme!</b>
                     <ul>
                         <li><b>FINALLY finished 2006 theme.</b></li>
-                        <li>Add <a href="https://github.com/ktg5/PlayerTube/issues/13">#13 -- "Light Theme for 2015 YouTube Player"</a>.</li>
+                        <li>Add <a href="https://github.com/ktg5/PlayerTube/issues/13">#13 - "Light Theme for 2015 YouTube Player"</a>.</li>
                         <li>CSS now uses extension storage so that another <a href="https://github.com/ktg5/PlayerTube/issues/14">#14</a> doesn't happen again.</li>
                         <li>Fix for possible console / html element spam.</li>
                         <li>Multiple resize script improvements.</li>
@@ -237,7 +239,7 @@
                 <div class="v1dot3dot1">
                     <div style="font-weight: 600;">v1.3.1</div>
                     <ul>
-                        <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/5">#5 -- "CustomTube's Custom Player Size Bug"</a></li>
+                        <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/5">#5 - "CustomTube's Custom Player Size Bug"</a></li>
                         <li>Fixed scaling issues with the Timed Markers.</li>
                         <li>Fixed a good amount of spelling mistakes... (Oops)</li>
                         <li>Added onto the GitHub issue templates & ReadMe file.</li>
@@ -263,7 +265,7 @@
                 <div class="v1dot2dot1">
                     <div style="font-weight: 600;">v1.2.1</div>
                     <ul>
-                        <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/3">#3 -- "Extension doesn't work on embeds"</a></li>
+                        <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/3">#3 - "Extension doesn't work on embeds"</a></li>
                     </ul>
                 </div>
 
@@ -273,8 +275,8 @@
                     <div style="font-weight: 600;">v1.2</div>
                     <ul>
                         <li>Extension is accepted on Firefox.</li>
-                        <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/2">#2 -- "<kbd>moveElement</kbd> function slowing everything down"</a></li>
-                        <li>Fixed an issue in the settings popup where settings won't load. -- This was solved by making the popup's script make a new config if the user doesn't have one already.</li>
+                        <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/2">#2 - "<kbd>moveElement</kbd> function slowing everything down"</a></li>
+                        <li>Fixed an issue in the settings popup where settings won't load, which was solved by making the popup's script make a new config if the user doesn't have one already.</li>
                     </ul>
                 </div>
 
@@ -284,7 +286,7 @@
                     <div style="font-weight: 600;">v1.1</div>
                     <ul>
                         <li>First version to be uploaded on web-stores! (Chrome & Firefox)</li>
-                        <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/1">#1 -- "Rewrite Settings Menu"</a></li>
+                        <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/1">#1 - "Rewrite Settings Menu"</a></li>
                         <li>Fixed some issues with the Firefox build.</li>
                         <li>Fixed styling.</li>
                     </ul>
